# llm-healthcare-claims-calibration

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: abstention_sensitivity.yaml  calibration_comparison.yaml  synthetic_baseline.yaml
data/: data_dictionary.md
data/synthetic/: claims_synthetic.csv
paper/tables/: calibration_results.csv  threshold_results.csv
pytest/: __init__.py  __main__.py
reports/: experiment_summary.md
results/: bootstrap_results.csv  confidence_variant_results.csv  cost_sensitivity_results.csv
scripts/: run_experiment.py
src/llm_claims_calibration/: __init__.py  config.py
src/llm_claims_calibration/abstention/: __init__.py  risk_coverage.py
src/llm_claims_calibration/bayesian/: __init__.py  beta_binomial.py  expected_loss.py
src/llm_claims_calibration/calibration/: __init__.py  methods.py
src/llm_claims_calibration/confidence/: __init__.py  variants.py
src/llm_claims_calibration/cost/: __init__.py  sensitivity.py
src/llm_claims_calibration/data/: __init__.py  generate_synthetic_claims.py  schema.py
src/llm_claims_calibration/evaluation/: __init__.py  bootstrap.py  metrics.py
src/llm_claims_calibration/reporting/: __init__.py  plots.py  summary.py
tests/: test_beta_binomial.py  test_bootstrap.py  test_confidence_variants.py  test_cost_sensitivity.py  test_metrics.py  test_pipeline.py  test_thresholds.py
